--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template</title>
+  <title>Quote Generatior</title>
   <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=css-tricks.com">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div class="quote-container" id="quote-container">
+    <!-- Quote -->
+    <div class="quote-text">
+      <i class="fas fa-quote-left"></i>
+      <span id="quote">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </span>
+    </div>
+    <!-- Author -->
+    <div class="quote-author">
+      <span id="author">Lorem ipsum dolor </span>
+    </div>
+    <!-- Buttons -->
+    <div class="button-container">
+      <button class="twitter-button" id="twitter" title="Tweet this!">
+          <i class="fab fa-twitter"></i>
+      </button>
+      <button id="new-quote">
+        New Quote
+      </button>
+    </div>
+  </div>
   <!-- Script JS -->
   <script src="./script.js"></script>
 </body>
