--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <!-- Quote -->
     <div class="quote-text">
       <i class="fas fa-quote-left"></i>
-      <span id="quote">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </span>
+      <span id="quote"> </span>
     </div>
     <!-- Author -->
     <div class="quote-author">
-      <span id="author">Lorem ipsum dolor </span>
+      <span id="author"></span>
     </div>
     <!-- Buttons -->
     <div class="button-container">
@@ -30,6 +30,8 @@
       </button>
     </div>
   </div>
+  <!-- Loader -->
+  <div class="loader" id="loader"></div>
   <!-- Script JS -->
   <script src="./script.js"></script>
 </body>
